--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -8,7 +8,7 @@
         <a class="btn btn-primary" id="refresh">Refresh</a>
         <a class="btn btn-primary" id="quick-print">Quick print</a>
         <a class="btn btn-primary" onclick="export_report_excel()">Excel</a>
-        <a class="btn btn-primary">Target</a>
+        <a class="btn btn-primary" id="target">Target</a>
         <a class="btn btn-primary">All defects</a>
         <a class="btn btn-primary">Key station defects</a>
         <!--<a class="btn btn-func">Change data</a>-->
