fix dpv partial

--- a/app/assets/stylesheets/report/daily_dpv.css.scss
+++ b/app/assets/stylesheets/report/daily_dpv.css.scss
@@ -94,4 +94,14 @@
       }
     }
   }
+  &.discussion{
+    .left{
+      width:100%;
+      overflow-x:hidden;
+      .chart_dpv_one{
+        border-width:0px;
+      }
+    }
+
+  }
 }
