--- a/app/views/stories/_daily-dpv.html.erb
+++ b/app/views/stories/_daily-dpv.html.erb
@@ -1,11 +1,8 @@
-<section class="daily_dpv">
-  <div class="left">
-    <div id="chart_dpv_one" class="chart_dpv_one"></div>
+<section class="daily_dpv discussion" id="daily_dpv" style="height:600px;">
+  <div class="left" id="daily_dpv_left">
+    <div id="chart_dpv_one" class="chart_dpv_one" style="height:200px"></div>
     <div id="data_container" class="data_container"></div>
-    <div id="chart_dpv_two" class="chart_dpv_two"></div>
-
-  </div>
-  <div class="right">
+    <div id="chart_dpv_two" class="chart_dpv_two" style="height:200px"></div>
   </div>
 </section>
 <script>
