--- a/app/assets/stylesheets/report/current_status.css.scss
+++ b/app/assets/stylesheets/report/current_status.css.scss
@@ -81,3 +81,31 @@
   -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
+.current-status-wrapper{
+   .wrapper-header{
+     width:100%;
+     height:69px;
+     background:lighten(#fbe8af,9%);
+     border-bottom:1px solid rgba(0,0,0,0.2);
+     .back-btn{
+       background:url(/assets/report-back-btn.png)no-repeat center center;
+       background-size:contain;
+       cursor:pointer;
+       width:220px;
+       height:40px;
+       @include border-radius(0px,5px,5px,0);
+       display: inline-block;
+       margin:10px 0 0 10px;
+       padding:10px 0 0 10px;
+       span{
+         display:block;
+         color:#fff;
+         font-size:14px;
+         padding:7px 0 0 30px;
+       }
+       &:hover span{
+         color:rgba(0,0,0,1);
+       }
+     }
+   }
+}
