--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -10,9 +10,9 @@
     <li><a menu="daily_dpv"><i class="icon-columns mark"></i> Daily DPV<i class="icon-chevron-right indicate"></i></a></li>
     <li><a menu="station_data"><i class="icon-list mark" menu="station-data" href="#station-data"></i> Station data<i class="icon-chevron-right indicate"></i></a></li>
 	<li><a menu="summary_report" href="#summary-report"><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a ><i class="icon-screenshot mark" menu="tracking-report" href="#tracking-report"></i> Tracking report<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a ><i class="icon-remove-sign mark" menu="defects" href="#deffects"></i> Defects<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a ><i class="icon-dashboard mark" menu="vehicle-info" href="#vehicle-info"></i> Vehicle information<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="tracking_report" href="#tracking-report"><i class="icon-screenshot mark" ></i> Tracking report<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="defects" href="#defects"><i class="icon-remove-sign mark" ></i> Defects<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="vehicle_info" href="#vehicle-info"><i class="icon-dashboard mark" ></i> Vehicle information<i class="icon-chevron-right indicate"></i></a></li>
   </ul>
   <a class="btn btn-primary share" id="share_to_discussion_btn">Share to discussion</a>
 
