--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -32,6 +32,25 @@
        <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
        <p>Target setting</p>
      </div>
+    <div class="wrapper-current-body"></div>
+  </section>
+  <section id="current-status-all-defects" class='current-status-wrapper'>
+    <div class="wrapper-header">
+      <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
+      <p>All defects</p>
+    </div>
+    <div class="wrapper-current-body">
+      <div id="all_defects" class="data_container"></div>
+    </div>
+  </section>
+  <section id="current-status-key-defects" class='current-status-wrapper'>
+    <div class="wrapper-header">
+      <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
+      <p>Key station defects</p>
+    </div>
+    <div class="wrapper-current-body">
+      <div id="key_defects" class="data_container"></div>
+    </div>
   </section>
 </section>
 <div id="current_status_loader" class="current-status-pageload-overlay" data-opening="M20,15 50,30 50,30 30,30 Z;M0,0 80,0 50,30 20,45 Z;M0,0 80,0 60,45 0,60 Z;M0,0 80,0 80,60 0,60 Z" data-closing="M0,0 80,0 60,45 0,60 Z;M0,0 80,0 50,30 20,45 Z;M20,15 50,30 50,30 30,30 Z;M30,30 50,30 50,30 30,30 Z">
@@ -43,6 +62,7 @@
 
 <% content_for :javascript_includes do %>
     <%= javascript_include_tag "reports/current_status" %>
+    <%= javascript_include_tag "reports/defects" %>
 <% end %>
 
 <script>
