--- a/app/assets/stylesheets/report/daily_dpv.css.scss
+++ b/app/assets/stylesheets/report/daily_dpv.css.scss
@@ -64,15 +64,15 @@
             margin:8px 0 12px;
           }
         }
-//        &:nth-of-type(2){
-//          .btn_excel{
-//            font-size:13px;
-//            padding:4px 8px;
-//            width:140px;
-//            margin:8px 0 12px;
-//          }
-//        }
         &:nth-of-type(2){
+          .btn_excel{
+            font-size:13px;
+            padding:4px 8px;
+            width:140px;
+            margin:8px 0 12px;
+          }
+        }
+        &:nth-of-type(3){
           .snap-groups{
             border-top-width:0;
             white-space: normal;
