--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -21,6 +21,10 @@
         <a id="retrieve-data" class="btn btn-primary retrieve_data">Retrieve Data</a>
       </div>
       <div class="condition_block">
+        <label>Export to</label>
+        <a class="btn btn-success btn_excel">Excel</a>
+      </div>
+      <div class="condition_block">
         <label>Snapshot</label>
         <%= render 'snap'%>
       </div>
