--- a/app/views/reports/_current-status.html.erb
+++ b/app/views/reports/_current-status.html.erb
@@ -32,7 +32,7 @@
        <a class="back-btn current-status-target-back-btn"><span>FTQ  Summary  Percentage</span></a>
        <p>Target setting</p>
      </div>
-    <div class="wrapper-current-body"></div>
+    <div id="target_setting" class="wrapper-current-body"></div>
   </section>
   <section id="current-status-all-defects" class='current-status-wrapper'>
     <div class="wrapper-header">
