--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_include_tag "preload/svgLoader.js" %>
     <%= javascript_include_tag "xml2json"%>
     <%= javascript_include_tag "reports/report.js" %>
+    <%= javascript_include_tag "reports/report_center" %>
     <%= javascript_include_tag "reports/main.js" %>
     <%= javascript_include_tag "reports/snap" %>
     <%= javascript_include_tag "func-module/chosen"%>
