--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -15,9 +15,8 @@
     <li><a menu="vehicle_info" href="#vehicle-info"><i class="icon-dashboard mark" ></i> Vehicle information<i class="icon-chevron-right indicate"></i></a></li>
   </ul>
   <a class="btn btn-primary share" id="share_to_discussion_btn">Share to discussion</a>
-
   <a class="btn btn-success snap" id="snap-shot-button">Snapshot</a>
-
+  <a class="btn subscribe" id="reports_subscribe">Report subscription</a>
 </section>
 
 </div>
