--- a/app/assets/stylesheets/report/snap.css.scss
+++ b/app/assets/stylesheets/report/snap.css.scss
@@ -46,7 +46,7 @@
       text-align:right;
       &:nth-of-type(1){
         margin-top:6px;
-        @include word-break;
+        @include text-overflow;
       }
       &:nth-of-type(2){
         color:#d8a303;
