--- a/app/assets/stylesheets/report/reports.css.scss
+++ b/app/assets/stylesheets/report/reports.css.scss
@@ -86,10 +86,10 @@ $list-width:220px;
       &.subscribe{
         bottom:30px;
         color:#fff;
-        $bg_color:#888;
+        $bg_color:lighten($nav-dark,8%);
         background:$bg_color;
-        background:-moz-linear-gradient(top,rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.5) 10%,rgba(221,221,221, 0.2) 55%) $bg_color;
-        background:-webkit-linear-gradient(top,rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.5) 10%,rgba(221,221,221, 0.2) 55%) $bg_color;
+        background:-moz-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 10%,rgba(221,221,221, 0.2) 55%) $bg_color;
+        background:-webkit-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 10%,rgba(221,221,221, 0.2) 55%) $bg_color;
       }
     }
   }
