--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -22,7 +22,7 @@
       </div>
       <div class="condition_block">
         <label>Export to</label>
-        <a class="btn btn-success btn_excel">Excel</a>
+        <a class="btn btn-success btn_excel" onclick="export_report_chart_excel()">Excel</a>
       </div>
       <div class="condition_block">
         <label>Snapshot</label>
