--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -6,13 +6,14 @@
   </div>
   <ul id="my-reports">
     <p>Quality Gate</p>
-    <li><a class="active" menu="current_status" href="#current-status"><i class="icon-adjust mark"></i> Current status<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a menu="daily_dpv"><i class="icon-columns mark"></i> Daily DPV<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a menu="station_data"><i class="icon-list mark" menu="station-data" href="#station-data"></i> Station data<i class="icon-chevron-right indicate"></i></a></li>
-	<li><a menu="summary_report" href="#summary-report"><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a menu="tracking_report" href="#tracking-report"><i class="icon-screenshot mark" ></i> Tracking report<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="current_status" href="#current_status"><i class="icon-th mark"></i> Current status<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="daily_dpv" href="#daily_dpv"><i class="icon-adjust mark"></i> Daily DPV<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i> Daily FTQ<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="station_data" href="#station_data"><i class="icon-list mark" menu="station-data" href="#station-data"></i> Station data<i class="icon-chevron-right indicate"></i></a></li>
+	<li><a menu="summary_report" href="#summary_report"><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="tracking_report" href="#tracking_report"><i class="icon-screenshot mark" ></i> Tracking report<i class="icon-chevron-right indicate"></i></a></li>
     <li><a menu="defects" href="#defects"><i class="icon-remove-sign mark" ></i> Defects<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a menu="vehicle_info" href="#vehicle-info"><i class="icon-dashboard mark" ></i> Vehicle information<i class="icon-chevron-right indicate"></i></a></li>
+    <li><a menu="vehicle_info" href="#vehicle_info"><i class="icon-dashboard mark" ></i> Vehicle information<i class="icon-chevron-right indicate"></i></a></li>
   </ul>
   <a class="btn btn-primary share" id="share_to_discussion_btn">Share to discussion</a>
   <a class="btn btn-success snap" id="snap-shot-button">Snapshot</a>
