--- a/app/views/reports/_subscription.html.erb
+++ b/app/views/reports/_subscription.html.erb
@@ -1,1 +1,9 @@
-<h2>Subscription</h2>
+<section class="report-subscription">
+  <div class="header" id="report-subscription-header">
+      <p>Report subscription center</p>
+      <a class="btn btn-success" id="report-subscription-save">Save</a>
+      <a class="btn btn-normal" id="report-subscription-cancel">Cancel</a>
+  </div>
+  <div class="subscription-list" id="subscription-list">
+  </div>
+</section>
