--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -9,7 +9,7 @@
 
     <li number="0"><a class="active" menu="current_status"><i class="icon-adjust mark"></i> Current page<i class="icon-chevron-right indicate"></i></a></li>
     <li number="8"><a menu="daily_dpv"><i class="icon-columns mark"></i> Daily DPV&SDPV<i class="icon-chevron-right indicate"></i></a></li>
-    <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i> Daily FTQ<i class="icon-chevron-right indicate"></i></a></li>
+    <li number="7"><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i> Daily FTQ<i class="icon-chevron-right indicate"></i></a></li>
     <li number="2"><a menu="station_data"><i class="icon-list mark" menu="station-data" href="#station-data"></i> Station data<i class="icon-chevron-right indicate"></i></a></li>
 	<li number="1"><a menu="summary_report"><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
     <li number="9"><a menu="tracking_report"><i class="icon-screenshot mark" ></i> Daily KPI tracking<i class="icon-chevron-right indicate"></i></a></li>
