--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -25,6 +25,7 @@
     <%= javascript_include_tag "reports/html2canvas" %>
     <%= javascript_include_tag "reports/canvas2image" %>
     <%= javascript_include_tag "reports/base64" %>
+    <%= javascript_include_tag "reports/current_status" %>
     <%= javascript_include_tag "highstock" %>
     <%= javascript_include_tag "Highchart/Highchart_generator" %>
     <%= javascript_include_tag "reports/daily_dpv" %>
