--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -31,4 +31,5 @@
     <%= javascript_include_tag "reports/daily_dpv" %>
     <%= javascript_include_tag "reports/report_subscription" %>
     <%= javascript_include_tag "reports/report_subscription_data" %>
+    <%= javascript_include_tag "reports/station_data" %>
 <% end %>
