--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -32,4 +32,5 @@
     <%= javascript_include_tag "reports/report_subscription" %>
     <%= javascript_include_tag "reports/report_subscription_data" %>
     <%= javascript_include_tag "reports/station_data" %>
+    <%= javascript_include_tag "bootstrap-datepicker" %>
 <% end %>
