--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -14,8 +14,8 @@
     <%= javascript_include_tag "reports/main.js" %>
     <%= javascript_include_tag "reports/snap" %>
     <%= javascript_include_tag "func-module/chosen"%>
-    <%= javascript_include_tag "dhtmlx.js"%>
-    <%= javascript_include_tag "dhtmlx-extend.js"%>
+    <%= javascript_include_tag "dhtmlx"%>
+    <%= javascript_include_tag "dhtmlx-extend"%>
     <%= javascript_include_tag "reports/report_menu"%>
     <%= javascript_include_tag "reports/rand"%>
     <%= javascript_include_tag "reports/data-daily-dpv"%>
