--- a/app/assets/stylesheets/report/station_data.css.scss
+++ b/app/assets/stylesheets/report/station_data.css.scss
@@ -1,6 +1,72 @@
+@import "../STYLE";
 .station-data{
   .header{
     background:#fff;
-    height:60px;
+    height:105px;
+    border-bottom:1px solid rgba(0,0,0,0.2);
+    &:after{
+      @include after-clear;
+    }
+    .left{
+      float:left;
+      @include box-sizing-border;
+      width:50%;
+      padding-left:15px;
+      p{
+        margin:11px 0 2px 0;
+        color:#888;
+      }
+      input[type='text']{
+        font-size:13px;
+        padding:5px 5px;
+        width:160px;
+        &:first-of-type{
+          margin-top:0px;
+          margin-right:21px;
+          position:relative;
+        }
+      }
+      label{
+        font-size:26px;
+        margin-left: -16px;
+        margin-top: -5px;
+        color:#777;
+        position:absolute;
+      }
+      .btn{
+        padding:4px 8px;
+        font-size:13px;
+        margin:9px 0 0 239px;
+        width:130px
+      }
+    }
+    .right{
+      float:left;
+      @include box-sizing-border;
+      width:50%;
+      $right-distance:25px;
+      padding-right:$right-distance;
+      p{
+        margin:11px 0 2px 0;
+        color:#888;
+        text-align:right;
+      }
+      .btn{
+        margin-top:5px;
+        padding:4px 8px;
+        font-size:13px;
+        float:right;
+        width:130px;
+        margin-right:0px;
+      }
+    }
   }
+  .station-data-body{
+    background:#fff;
+    .gridbox{
+      border-width:0px !important;
+
+    }
+  }
+
 }
