--- a/app/views/reports/_station-data.html.erb
+++ b/app/views/reports/_station-data.html.erb
@@ -1,15 +1,22 @@
 <section class="station-data">
-<div class="header">
+<div class="header" id="station-data-header">
   <div class="left">
+    <p>Time interval</p>
     <input type="text" id="date-begin" readonly=true/>
+    <label>-</label>
     <input type="text" id="date-end" readonly=true/>
-    <input type="button" value="Retrieve" id="retrieve"/>
+    <br>
+    <input type="button" value="Retrieve" id="retrieve" class="btn btn-primary"/>
   </div>
   <div class="right">
-    <a class="btn btn-primary" onclick="export_report_excel()">Excel</a>
+    <p>Export to</p>
+    <a class="btn btn-success" onclick="export_report_excel()">Excel</a>
   </div>
 </div>
-<div id="data_container" style="height:500px; background-color:white;"></div>
+<div class="station-data-body" id="station-data-body">
+  <div id="data_container" ></div>
+</div>
+<%= render 'snap'%>
 </section>
 
 <script>
