--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -73,6 +73,7 @@
     <%= javascript_include_tag "highstock" %>
     <%= javascript_include_tag "Highchart/Highchart_generator" %>
     <%= javascript_include_tag "reports/daily_dpv" %>
+    <%= javascript_include_tag "reports/station_data" %>
     <!--Report JS-->
 <% end %>
 
