--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,6 +51,7 @@
 *= require report/current_status
 *= require report/report_subscription
 *= require report/station_data
+*= require report/daily_ftq
 
 *= require popModal.min
 *= require dhtmlx
