--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -1,4 +1,10 @@
-<div id="data_container" class="data_container" style="height:500px"></div>
+<section class="daily-ftq">
+  <div id="data_container" class="data_container" style="height:500px"></div>
+  <%= render 'snap'%>
+</section>
+<% content_for :javascript_includes do %>
+    <%= javascript_include_tag "reports/daily_ftq" %>
+<% end %>
 <script>
   $(document).ready(function(){
       Report.init("daily_ftq");
