--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -7,14 +7,14 @@
   <ul id="my-reports">
     <p>Quality Gate</p>
 
-    <li number="0"><a menu="current_status" href="#current_status"><i class="icon-adjust mark"></i> Current page<i class="icon-chevron-right indicate"></i></a></li>
+    <li number="0"><a menu="current_status" href="#current_status"><i class="icon-adjust mark"></i> Current Status<i class="icon-chevron-right indicate"></i></a></li>
     <li number="8"><a menu="daily_dpv" href="#daily_dpv"><i class="icon-columns mark"></i> Daily DPV&SDPV<i class="icon-chevron-right indicate"></i></a></li>
     <li number="7"><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i> Daily FTQ<i class="icon-chevron-right indicate"></i></a></li>
-    <li number="2"><a menu="station_data" href="#station_data"><i class="icon-list mark" menu="station-data" href="#station-data"></i> Station data<i class="icon-chevron-right indicate"></i></a></li>
-	<li number="1"><a menu="summary_report" href="#summary_report"><i class="icon-columns mark"></i> Sumary report<i class="icon-chevron-right indicate"></i></a></li>
-    <li number="9"><a menu="tracking_report" href="#tracking_report"><i class="icon-screenshot mark" ></i> Daily KPI tracking<i class="icon-chevron-right indicate"></i></a></li>
+    <li number="2"><a menu="station_data" href="#station_data"><i class="icon-list mark" menu="station-data" href="#station-data"></i> Station Data<i class="icon-chevron-right indicate"></i></a></li>
+	<li number="1"><a menu="summary_report" href="#summary_report"><i class="icon-columns mark"></i> Summary Report<i class="icon-chevron-right indicate"></i></a></li>
+    <li number="9"><a menu="tracking_report" href="#tracking_report"><i class="icon-screenshot mark" ></i> Daily KPI Tracking<i class="icon-chevron-right indicate"></i></a></li>
     <li number="4"><a menu="defects" href="#defects"><i class="icon-remove-sign mark" ></i> Defect<i class="icon-chevron-right indicate"></i></a></li>
-    <li number="3"><a menu="vehicle_info" href="#vehicle_info"><i class="icon-dashboard mark" ></i> Vehicle information<i class="icon-chevron-right indicate"></i></a></li>
+    <li number="3"><a menu="vehicle_info" href="#vehicle_info"><i class="icon-dashboard mark" ></i> Vehicle Information<i class="icon-chevron-right indicate"></i></a></li>
 
   </ul>
   <a class="btn btn-primary share" id="share_to_discussion_btn">Share to discussion</a>
