--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -1,4 +1,5 @@
 <div id="data_container" class="data_container" style="height:500px"></div>
+<a class="btn btn-success btn_excel" onclick="export_report_chart_excel()">Excel</a>
 <script>
   $(document).ready(function(){
       Report.init("daily_ftq");
