--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -1,4 +1,6 @@
 <section class="daily-ftq">
+  <div id="chart_container" style='width:700px;height:400px'></div>
+
   <div id="data_container" class="data_container" style="height:500px"></div>
   <%= render 'snap'%>
 </section>
