--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -29,6 +29,7 @@
     <%= javascript_include_tag "highstock" %>
     <%= javascript_include_tag "Highchart/Highchart_generator" %>
     <%= javascript_include_tag "reports/daily_dpv" %>
+    <%= javascript_include_tag "reports/daily_ftq" %>
     <%= javascript_include_tag "reports/report_subscription" %>
     <%= javascript_include_tag "reports/report_subscription_data" %>
     <%= javascript_include_tag "reports/station_data" %>
