--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -1,8 +1,10 @@
-<section class="daily-ftq">
-  <div id="chart_container" style='width:700px;height:400px'></div>
-
-  <div id="data_container" class="data_container" style="height:500px"></div>
-  <a class="btn btn-success btn_excel" onclick="export_report_chart_excel()">Excel</a>
+<section class="daily-ftq" >
+  <div class="header" id="daily-ftq-header">
+    <p>Export to:</p>
+    <a class="btn btn-success btn_excel" onclick="export_report_chart_excel()">Excel</a>
+  </div>
+  <div id="chart_container" ></div>
+  <div id="data_container" class="data_container"></div>
   <%= render 'snap'%>
 </section>
 <% content_for :javascript_includes do %>
