--- a/app/views/stories/_daily-ftq.html.erb
+++ b/app/views/stories/_daily-ftq.html.erb
@@ -1,3 +1,4 @@
+<div id="chart_container" ></div>
 <div id="data_container" class="data_container" style="height:500px"></div>
 <input id="hidden-data" type="hidden" value="<%= @chart_conditions.first.data %>"/>
 <script>
