--- a/app/assets/stylesheets/report/station_data.css.scss
+++ b/app/assets/stylesheets/report/station_data.css.scss
@@ -14,7 +14,7 @@
       padding-left:15px;
       p{
         margin:11px 0 2px 0;
-        color:#888;
+        color:#222
       }
       input[type='text']{
         font-size:13px;
