--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -4,7 +4,7 @@
     <a class="btn btn-success btn_excel" onclick="export_report_chart_excel()">Excel</a>
   </div>
   <div id="chart_container" ></div>
-  <div id="data_container" class="data_container"></div>
+  <div id="data_container" class="data_container" height="160px"></div>
   <%= render 'snap'%>
 </section>
 <% content_for :javascript_includes do %>
