--- a/app/assets/stylesheets/report/current_status.css.scss
+++ b/app/assets/stylesheets/report/current_status.css.scss
@@ -1,4 +1,5 @@
 @import "../STYLE";
+@import "../STYLE";
 .current-status{
   .header{
     background:rgba(255,255,255,0.3);
@@ -120,9 +121,81 @@
        pointer-events:none;
      }
    }
-  .wrapper-body{
-    .data_container{
-
+  .wrapper-current-body{
+    border-width:0px !important;
+    background:#fff;
+  }
+  .target-setting-footer{
+    height:110px;
+    background:#fff;
+    border-top:1px solid rgba(0,0,0,0.2);
+    $padding-left:14px;
+    .footer-left{
+      float:left;
+      @include box-sizing-border;
+      width:330px;
+      margin-top:1px;
+      padding-right:10px;
+      border-right:1px solid rgba(0,0,0,0.2);
+      &>p{
+        &:first-of-type{
+          color:#888;
+          font-size:14px;
+          padding-top:9px;
+          padding-left:$padding-left;
+          margin:0px;
+        }
+        color:#666;
+        text-align:right;
+        padding-left:$padding-left;
+        margin-bottom:4px;
+        font-size:17px;
+      }
+    }
+    .footer-right{
+      position:relative;
+      float:left;
+      width:calc(100% - 330px);
+      @include box-sizing-border;
+      &>p{
+        &:first-of-type{
+          color:#888;
+          font-size:14px;
+          padding-top:9px;
+          padding-left:$padding-left+8;
+          margin:0px;
+        }
+      }
+      .color-group{
+        display:block;
+        margin-top:11px;
+        margin-left:$padding-left+8;
+        &:first-of-type{
+          margin-top:3px;
+        }
+        &:after{
+          @include after-clear;
+        }
+        .color-item{
+          $width:15px;
+           float:left;
+          display:inline-block;
+          margin-right:5px;
+          width:$width;
+          height:$width;
+          cursor:pointer;
+          &.active{
+            border:1px solid #777;
+          }
+        }
+      }
+      &>label{
+        position:absolute;
+        color:rgba(0,0,0,0.2);
+        right:14px;
+        bottom:3px;
+        font-size:25px;
+      }
     }
   }
 }
