--- a/app/views/reports/_daily-dpv.html.erb
+++ b/app/views/reports/_daily-dpv.html.erb
@@ -1,7 +1,7 @@
 <section class="daily_dpv" id="daily_dpv">
   <div class="left" id="daily_dpv_left">
       <div id="chart_dpv_one" class="chart_dpv_one"></div>
-      <div id="data_container" class="data_container"></div>
+      <div id="data_container" class="data_container" style="height: 200px"></div>
       <div id="chart_dpv_two" class="chart_dpv_two"></div>
 
   </div>
