add bt report excel export

--- a/app/views/reports/_station-data.html.erb
+++ b/app/views/reports/_station-data.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="right">
     <p>Export to</p>
-    <a class="btn btn-success" onclick="export_report_excel()">Excel</a>
+    <a class="btn btn-success" onclick="export_bt_report_excel()">Excel</a>
   </div>
 </div>
 <div class="station-data-body" id="station-data-body">
