--- a/app/assets/stylesheets/report/reports.css.scss
+++ b/app/assets/stylesheets/report/reports.css.scss
@@ -110,72 +110,65 @@ $list-width:220px;
   .current-status{
     .header{
       width:100%;
-      height:85px;
+      height:100px;
       border-bottom:1px solid rgba(0,0,0,0.2);
       $margin-top:8px;
       &:after{
         @include after-clear;
       }
-      .left{
+      .header-block{
         float:left;
         @include box-sizing-border;
-        width:60%;
-        p{
-          $margin-left:10px;
-          margin:0px;
+        padding:3px 0 0 8px;
+        border-left:1px solid rgba(0,0,0,0.1);
+        width:15%;
+        margin:5px 0;
+        &>label{
+          display:block;
           font-size:14px;
-          display: inline-block;
-          margin-left:$margin-left;
-          &:first-of-type{
-            font-size:18px;
-            display:block;
-            margin-top:$margin-top;
-            margin-left:$margin-left;
+          color:rgba(0,0,0,0.4);
+        }
+        &>.btn{
+          padding:5px 8px;
+          font-size:13px;
+          margin-top:5px;
+          width:135px;
+        }
+        &:first-of-type{
+          width:400px;
+          border-left-width:0px;
+          p{
+            margin:0px;
+            font-size:14px;
+            display: inline-block;
+            &:first-of-type{
+              font-size:18px;
+              display:block;
+            }
+            &:nth-of-type(3){
+              color:$golden-text;
+            }
           }
-          &:nth-of-type(3){
-            color:$golden-text;
+          select{
+            width:280px;
+            paddding:5px 6px;
+            margin-top:4px;
           }
         }
-        .btn-groups{
-          .btn{
-            float:left;
-            font-size:12px;
-//            width:60px;
-            padding:5px 18px;
-            display:inline-block;
-            margin-right:5px;
-            margin-left:8px;
-            margin-top:2px;
-          }
+        &:nth-of-type(4){
+          width:200px;
         }
-      }
-      .right{
-        float:left;
-        @include box-sizing-border;
-        width:40%;
-        $magin-right:40px;
-        p{
-          float:right;
-          font-size:18px;
-          margin:0px;
-          margin-top:$margin-top;
-          margin-right:$magin-right;
-          span{
-            display:inline-block;
+        &:last-of-type{
+          width:calc(70% - 600px);
+          height:85px;
+          p{
+            padding:10px 0 0 17px;
+            font-size:29px;
+            color:#333
           }
-          span:first-of-type{
-            margin-right:8px;
-          }
-        }
-        select{
-//          margin-top:10px;
-          margin-right:$magin-right;
-          clear:right;
-          float:right;
-          width:280px;
-          paddding:5px 6px;
         }
       }
+
     }
     .data-container{
       background-color:#fff;
