--- a/app/assets/stylesheets/report/reports.css.scss
+++ b/app/assets/stylesheets/report/reports.css.scss
@@ -131,8 +131,8 @@ $list-width:220px;
         &>.btn{
           padding:5px 8px;
           font-size:13px;
-          margin-top:5px;
-          width:135px;
+          width:115px;
+          margin:5px auto;
         }
         &:first-of-type{
           width:400px;
