report to analyse

--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -301,6 +301,7 @@
   <input type="hidden" id="s_end_time" value="<%=@s_end_time%>"/>
   <input type="hidden" id="s_calculate_type" value="<%=@s_calculate_type%>"/>
   <input type="hidden" id="s_interval" value="<%=@s_interval%>"/>
+  <input type="hidden" id="s_qoros_demo" value="<%=@qoros_demo%>"/>
 </div>
 
 <% content_for :javascript_includes do %>
