--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -206,6 +206,7 @@
   <%= javascript_include_tag "Dashboard-add.js"%>
   <%= javascript_include_tag "Dashboard-init.js"%>
   <%= javascript_include_tag "dashboard_type_special.js"%>
+  <%= javascript_include_tag "dhtmlx" %>
 <%end%>
 
 <script type="text/javascript">
