--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -82,13 +82,14 @@
                     <li class="active"type="column"></li>
                     <li type="pie"></li>
                     <li type="scatter"></li>
+                    <li type="table"></li>
                   </ul>
             </section>
             <section class="solid">
                   <h3><%= t 'dashboard_group.dashboard.content' %></h3>
                   <p><%= t 'dashboard_group.dashboard.content_desc' %></p>
                   <ul class="db-add-kpi-list" id="db-add-kpi-list"></ul>
-                  <a class="btn btn-primary" id="add-one-series"><%= t 'dashboard_group.dashboard.add_series' %></a>
+                  <a class="btn btn-primary" id="add-one-series" style="width:140px;margin-left:-76px;"><%= t 'dashboard_group.dashboard.add_series' %></a>
             </section>
             <section class="solid">
                   <h3><%= t 'dashboard_group.dashboard.group' %></h3>
