--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -2,7 +2,7 @@
 
 <section>
   <div class="header">
-    <p>Report Center</p>
+    <p>App Center</p>
   </div>
   <ul id="my-reports">
     <p>Quality Gate</p>
@@ -19,7 +19,7 @@
   </ul>
   <a class="btn btn-primary share" id="share_to_discussion_btn">Share to discussion</a>
   <a class="btn btn-success snap" id="snap-shot-button">Snapshot</a>
-  <a class="btn subscribe" id="reports_subscribe">Report subscription</a>
+  <a class="btn subscribe" id="reports_subscribe">App subscription</a>
 </section>
 
 </div>
