--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -46,7 +46,7 @@
               <span><%= t 'menu.subscription' %></span> </a>
           </li>
           <li>
-            <a href="<%= reports_path%>"><span>Report Center</span></a>
+            <a href="<%= reports_path%>"><span>App Center</span></a>
           </li>
       <% end %>
       <li>
