--- a/app/views/reports/_subscription.html.erb
+++ b/app/views/reports/_subscription.html.erb
@@ -1,6 +1,6 @@
 <section class="report-subscription">
   <div class="header" id="report-subscription-header">
-      <p>Report subscription center</p>
+      <p>App subscription center</p>
       <a class="btn btn-success" id="report-subscription-save">Save</a>
       <a class="btn btn-normal" id="report-subscription-cancel">Cancel</a>
   </div>
