--- a/app/views/layouts/non_authorized.html.erb
+++ b/app/views/layouts/non_authorized.html.erb
@@ -8,34 +8,34 @@
      </head>
      <body>
      <%= render :partial=>'shares/message_box'%>
-          <!--<article class="wrap-main">
-               <div class="log-general">
-                    <header>
-                         <div class="log-header-image">
-                              <div class="log-logo"></div>
-                              <a href="<%= @href%>"><%= @title %></a>
-                              <div class="language-select">
-                                   <select class="chosen-select">
-                                        <option>English</option>
-                                        <option>中文</option>
-                                   </select>
-                              </div>
-                         </div>
-                    </header>
-                    <div class="log-body">
-                         <div class="log-btn-group"> 
-                              <%= yield %>
-                         </div>
-                    </div>
-               </div>
-          </article>
-     -->
+          <!--<article class="wrap-main">-->
+               <!--<div class="log-general">-->
+                    <!--<header>-->
+                         <!--<div class="log-header-image">-->
+                              <!--<div class="log-logo"></div>-->
+                              <!--<a href="<%= @href%>"><%= @title %></a>-->
+                              <!--<div class="language-select">-->
+                                   <!--<select class="chosen-select">-->
+                                        <!--<option>English</option>-->
+                                        <!--<option>中文</option>-->
+                                   <!--</select>-->
+                              <!--</div>-->
+                         <!--</div>-->
+                    <!--</header>-->
+                    <!--<div class="log-body">-->
+                         <!--<div class="log-btn-group">-->
+                              <!--<%= yield %>-->
+                         <!--</div>-->
+                    <!--</div>-->
+               <!--</div>-->
+          <!--</article>-->
 
-
-     </body>
+     <%= javascript_include_tag "i18n/i18n" %>
+     <%= javascript_include_tag "i18n/translations" %>
      <script type="text/javascript">
-               I18n.defaultLocale = "<%= I18n.default_locale %>";
-               I18n.locale = "<%= I18n.locale %>";
+         I18n.defaultLocale = "<%= I18n.default_locale %>";
+         I18n.locale = "<%= I18n.locale %>";
      </script>
+     </body>
 </html>
 
