--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,92 +10,15 @@
 </head>
 <body>
 
-
 <%= render :partial => 'shares/user_message' %>
 <article class="wrap-main" id="wrap-main">
   <%= render :partial => 'shares/menu' %>
   <%= yield %>
 </article>
 
-
-
 <%= render :partial => 'shares/message_box' %>
 <%= render :partial => 'shares/slide_box' %>
-
-
+<%= javascript_include_tag "i18n/i18n" %>
+<%= javascript_include_tag "i18n/translations" %>
 </body>
-<script type="text/javascript">
-    I18n.defaultLocale = "<%= I18n.default_locale %>";
-    I18n.locale = "<%= I18n.locale %>";
-
-    $.ajaxSetup({
-        statusCode: {
-            403: function () {
-                location.href = '/403';
-            },
-            404: function () {
-                location.href = '/404';
-            },
-            500: function () {
-               location.href = '/500';
-            }
-        }
-    });
-    var old_message = null;
-    (function callmessage() {
-        setTimeout(function () {
-            $.ajax({
-                url: '/users/message',
-                dataType: 'json',
-                type: 'get',
-                success: function (data) {
-                    if (old_message != JSON.stringify(data) || $('#user-message-control').val() == 'false') {
-                        $('#user-message-ul').children().remove();
-                        $.each(data, function (i, v) {
-                            if (v.count != 0) {
-                                $('#user-message-ul').append(
-                                        $("<li/>").append(
-
-                                                $("<a/>").attr('href', v.link)
-                                                        .append($("<span/>").text(v.content))
-                                                        .append($("<span/>").append($("<label />").text(v.count)))
-
-                                        )
-                                );
-                            }
-                        });
-                        if ($('#user-message-ul').children().length > 0)
-                            $('#user-message-div').popModal({
-                                html: $('#user-messgae-div'),
-                                onDocumentClickClose: false,
-                                onLoad: function () {
-                                    $('#user-messgae-div').show();
-                                    $('#user-message-control').val("true");
-                                },
-                                onClose: function () {
-                                    $('#user-messgae-div').hide();
-                                    $('#user-message-control').val("false");
-                                }
-                            });
-                        else {
-                            if ($('#user-message-control').val() == 'true')
-                                $('#user-message-div').popModal("hide");
-                        }
-                        old_message = JSON.stringify(data);
-                    }
-                    callmessage();
-                },
-                error: function () {
-                    console.log('e');
-                    callmessage();
-                },
-                complete: function (xhr) {
-                    if (xhr.status == 304) return;
-                }
-            });
-        }, 5000);
-    })();
-
-</script>
-<%= yield :javascript_includes %>
 </html>
