--- a/app/views/layouts/pure.html.erb
+++ b/app/views/layouts/pure.html.erb
@@ -7,7 +7,8 @@
      </head>
      <body>
           <%= yield %>
+          <%= javascript_include_tag "i18n/i18n" %>
+          <%= javascript_include_tag "i18n/translations" %>
      </body>
-     <%= yield :javascript_includes%>
-     <script type="text/javascript"></script>
+
 </html>
